- Puzzle-cat picture. Removed 1px white line on right side - Puzzle CSS modifications: - drop shadow added to pieces - NOT FIXED: tried to align properly on different screen sizes

--- a/css/master.css
+++ b/css/master.css
@@ -167,10 +167,11 @@ color: #555;
    z-index: 3;
    overflow: hidden;
 }
+
 #puzzlePic {
-   display: block;
    position: relative;
    margin: 15% 10% 0 10%;
+   bottom: 0;
    width: 80%;
    display: none;
 }
@@ -186,10 +187,24 @@ color: #555;
    margin: 0 34% 0 34%;
    z-index:4;
 }
-/* required snapPuzzle styles */
-.snappuzzle-wrap { position: relative; display: block; }
-.snappuzzle-pile { position: relative; }
-.snappuzzle-piece { cursor: move; }
+/* snapPuzzle styles */
+.snappuzzle-wrap {
+   position: relative;
+   display: block;
+   bottom: 0;
+   height: 100%;
+   width: 100%;
+}
+.snappuzzle-pile {
+   position: absolute;
+   z-index: 2;
+   margin: 2%;
+   height: 25%;
+   width: 96%
+}
+.snappuzzle-piece {
+   cursor: move;
+   box-shadow: 0px 5px 10px rgba(0,0,0,.3);}
 .snappuzzle-slot {
    position: absolute;
    background: #fff;
@@ -199,17 +214,3 @@ color: #555;
    margin-right: 10%;
 }
 .snappuzzle-slot-hover { background: #eee; }
-
-/*
-img id="laptop" src="pics/laptop.png" alt="laptop"/>
-#laptop {
-   display: block;
-   position: relative;
-   margin: 0 auto;
-   bottom: -100%;
-   width: 100%;
-   animation-name: moveHalf;
-   animation-delay: 1s;
-   animation-duration: 3s;
-   animation-fill-mode: forwards;
-}*/
